Fix homepage wrapping issue (#459)

--- a/assets/scss/pages/_homepage.scss
+++ b/assets/scss/pages/_homepage.scss
@@ -1,58 +1,60 @@
-#top-row-wrapper  {
-    padding-bottom: govuk-spacing(8);
+#top-row-wrapper {
+  margin-bottom: govuk-spacing(8);
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+
+  @media (min-width: 46.87em) {
+    flex-direction: row;
+  }
+}
+
+#events-summary-wrapper {
+  min-width: 100%;
+  padding-right: 0;
+  padding-left: 0;
+  margin-right: 0;
+
+  @media (min-width: 46.87em) {
+    min-width: 75%;
+    margin-right: 0.8%;
+  }
+}
+
+#internal-link-tile-profile {
+  padding-top: 0;
+  padding-right: 0;
+  padding-left: 0;
+
+  @media (max-width: 40.063em) {
+    min-width: 100%;
+    margin-top: 0.5em;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    padding-bottom: 0;
+
+    a > p {
+      padding-bottom: govuk-spacing(2);
+    }
+  }
+
+  @media (max-width: 46.87em) {
+    margin-top: 0.5em;
+    padding-bottom: 0;
+  }
+
+  @media (min-width: 40.064em) and (max-width: 68.74em) {
     display: flex;
     flex-direction: column;
     align-items: stretch;
 
-    @media(min-width: 68.75em) {
-        flex-direction: row;
+    a > p {
+      padding-bottom: govuk-spacing(2);
     }
-}
+  }
 
-#events-summary-wrapper {
-    min-width: 100%;
-    padding-right: 0;
-    padding-left: 0;
-    margin-right: 0;
-
-    @media(min-width: 68.75em) {
-        min-width: 75%;
-        margin-right: .8%;
-    }
-}
-
-#internal-link-tile-profile {
-    padding-top: 0;
-    padding-right: 0;
-    padding-left: 0;
-
-    @media(max-width: 40.063em) {
-        min-width: 100%;
-        margin-top: .5em;
-        display: flex;
-        flex-direction: column;
-        align-items: stretch;
-        padding-bottom: 0;
-
-        a > p {
-            padding-bottom: govuk-spacing(2);
-        }
-    }
-
-    @media(min-width: 40.064em) and (max-width: 68.74em) {
-        max-width: 18.281em;
-        margin-top: .5em;
-        display: flex;
-        flex-direction: column;
-        align-items: stretch;
-        padding-bottom: 0;
-
-        a > p {
-            padding-bottom: govuk-spacing(2);
-        }
-    }
-
-    @media(min-width: 68.75em) {
-        width: 24.5%;
-    }
+  @media (min-width: 46.87em) {
+    width: 24.5%;
+  }
 }
